--- a/react/odev3/package.json
+++ b/react/odev3/package.json
@@ -9,7 +9,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "axios": "^0.24.0",
+    "dotenv": "^11.0.0",
+    "formik": "^2.2.9"
   },
   "scripts": {
     "start": "react-scripts start",
